language/move-lang/tests/move_check/expansion/duplicate_module.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/duplicate_module.move:2:19
  │
1 │ module 0x8675309::M {}
  │                   - Module previously defined here
2 │ module 0x8675309::M {}
  │                   ^ Duplicate definition for module '0x8675309::M'

